# notebook-gena

./: 404.html  CONTRIBUTING.md  Dockerfile  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: main.yml
docs/: 1-mongodb.md  8-makefile.md  index.md  modules.md
modules/: index.html
notebook/: notebook-readme.md  test-mogolib.ipynb
notebook/common/: util.py
search/: search_index.json
src/notebook_gena/: basemongo.py  mongodb.py  mongoquery.py  postgresdb.py
tests/: conftest.py  my_resource.py  test_foo.py  test_mongodb.py  test_mongoquery.py  test_postgresdb.py
